--- a/index.html
+++ b/index.html
@@ -14,86 +14,102 @@
 
 <body>
     <div class="container-xxl shadow col-sp-bw">
-
-        <h1>Muju</h1>
-        <i class="ri-menu-line"></i>
-
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><b>Muju</b></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#shop">shop</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
 
     <div class="container-xxl ">
         <div class="row ">
             <div class="col-md-6 col-12 col">
                 <div class="respo">
-                    <img src="https://food-ordering-two-sigma.vercel.app/img/offer1.jpg" alt="">
+                    <img src="https://food-ordering-two-sigma.vercel.app/img/offer1.jpg" alt="" class="frame">
                 </div>
             </div>
-            <div class="col-md-6  col-12 col">
+            <div class="col-md-6 col-12 col">
                 <div class="respo">
-                    <img src="https://food-ordering-two-sigma.vercel.app/img/offer2.jpg" alt="">
+                    <img src="https://food-ordering-two-sigma.vercel.app/img/offer2.jpg" alt="" class="frame">
                 </div>
             </div>
 
         </div>
     </div>
 
-    <div class="container-xxl ">
+    <div class="container-xxl " id="shop">
         <div class="row ">
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/burger.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/pizza.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/frise.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/burger.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/pizza.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/frise.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/burger.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/pizza.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/frise.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/burger.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/pizza.jpg" alt="">
                 </div>
             </div>
-            <div class="col-md-2 col-sm-4 col-6 col">
+            <div class="col-md-2 col-sm-4 col-lg-1 col-6 col">
                 <div class="respo1">
                     <img src="https://food-ordering-two-sigma.vercel.app/img/frise.jpg" alt="">
                 </div>
@@ -106,16 +122,16 @@
 
     <div class="container-xxl ">
         <div class="row ">
-            <div class="col-3 col-sm-3 ">
+            <div class="col-lg-3 col-sm-6 ">
                 <h4 class="col">offers</h4>
             </div>
-            <div class="col-3 col-sm-3 ">
+            <div class="col-lg-3 col-sm-6 ">
                 <h4 class="col">sort</h4>
             </div>
-            <div class="col-3 col-sm-3 ">
+            <div class="col-lg-3 col-sm-6 ">
                 <h4 class="col">filter</h4>
             </div>
-            <div class="col-3 col-sm-3 ">
+            <div class="col-lg-3 col-sm-6 ">
                 <h4 class="col">quantity</h4>
             </div>
         </div>
@@ -294,6 +310,96 @@
 
         </div>
     </div>
+
+    <footer>
+        <div class="container-xl">
+            <div class="footer-nav row ">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="footer-links">
+                        <div class="link">
+                            <h2>Pizza</h2>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 ">
+                    <div class="footer-links">
+                        <div class="link">
+                            <h2>Burger</h2>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="footer-links">
+                        <div class="link">
+                            <h2>Frenchies</h2>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="footer-links">
+                        <div class="link">
+                            <h2>Document</h2>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="link">
+                            <a href="#">Home</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+    <div class="footer">
+        <p>copyright&copy; 2024 made with &hearts; by <b>Muju</b></p>
+    </div>
+
 </body>
 
 </html>
